--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@
 *.so
 *.dylib
 *.env
+*.DS_Store
 # Test binary, built with `go test -c`
 *.test
-
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
